--- a/src/app/components/inventories/inventarios-edit/inventarios-edit.component.html
+++ b/src/app/components/inventories/inventarios-edit/inventarios-edit.component.html
@@ -15,32 +15,16 @@
             <form [formGroup]="inventarioForm" (ngSubmit)="onSubmit()">
                 <div class="form-group">
                     <label for="grupo">Categoria</label>
-                    <select class="form-control" (change)="changeGroup1($event)" formControlName="categoria">
-                        <option [value]="0" selected>Seleccione una categoría</option>
-                        <option *ngFor="let categoria of lstCategorias" [value]="categoria.categoria">
-                            {{categoria.categoria}}
-                        </option>
-                    </select>
-                    <small *ngIf="selectCategoria">
-                        <small *ngIf="selectCategoria" style="color: red; ">
-                            Debe seleccionar una categoría.
-                        </small>
-                    </small>
+                    <input type="text" class="form-control" id="codigoSAP" placeholder="Ingrese la categoria"
+                        formControlName="categoria" />
+
                 </div>
 
                 <div class="form-group">
                     <label for="grupo">Tipo</label>
-                    <select class="form-control" (change)="changeGroup2($event)" formControlName="linea">
-                        <option [value]=" 0 " selected>Seleccione una línea</option>
-                        <option *ngFor="let linea of lstLineas" [value]="linea.linea">
-                            {{linea.linea}}
-                        </option>
-                    </select>
-                    <small *ngIf="selectLinea">
-                        <small *ngIf="selectLinea" style="color: red; ">
-                            Debe seleccionar un tipo.
-                        </small>
-                    </small>
+                    <input type="text" class="form-control" id="codigoSAP" placeholder="Ingrese el tipo"
+                        formControlName="linea" />
+
                 </div>
 
                 <!--
@@ -61,47 +45,21 @@
                 -->
                 <div class="form-group">
                     <label for="grupo">Modelo</label>
-                    <select class="form-control" (change)="changeGroup3($event)" formControlName="modelo">
-                        <option [value]=" 0 " selected>Seleccione un modelo</option>
-                        <option *ngFor="let modelo of lstModelos" [value]="modelo.modelo">
-                            {{modelo.modelo}}
-                        </option>
-                    </select>
-                    <small *ngIf="selectModelo">
-                        <small *ngIf="selectModelo" style="color: red; ">
-                            Debe seleccionar un modelo.
-                        </small>
-                    </small>
+                    <input type="text" class="form-control" id="codigoSAP" placeholder="Ingrese el modelo"
+                        formControlName="modelo" />
+
                 </div>
 
                     <div class="form-group">
                     <label for="grupo">Modelo Producto</label>
-                    <select class="form-control" (change)="changeGroup4($event)" formControlName="modelo_producto">
-                        <option [value]=" 0 " selected>Seleccione un modelo producto</option>
-                        <option *ngFor="let modelo_producto of lstModeloProductos" [value]="modelo_producto.modelo_producto">
-                            {{modelo_producto.modelo_producto}}
-                        </option>
-                    </select>
-                    <small *ngIf="selectModeloProducto">
-                        <small *ngIf="selectModeloProducto" style="color: red; ">
-                            Debe seleccionar un modelo producto.
-                        </small>
-                    </small>
+                    <input type="text" class="form-control" id="codigoSAP" placeholder="Ingrese el modelo producto"
+                        formControlName="modelo_producto" />
                     </div>
 
                     <div class="form-group">
                         <label for="grupo">Producto</label>
-                        <select class="form-control" (change)="changeGroup5($event)" formControlName="producto">
-                            <option [value]=" 0 " selected>Seleccione un producto</option>
-                            <option *ngFor="let producto of lstProductos" [value]="producto.nombre">
-                                {{producto.nombre}}
-                            </option>
-                        </select>
-                        <small *ngIf="selectProductos">
-                            <small *ngIf="selectProductos" style="color: red; ">
-                                Debe seleccionar un producto.
-                            </small>
-                        </small>
+                        <input type="text" class="form-control" id="codigoSAP" placeholder="Ingrese el producto"
+                            formControlName="producto" />
                         </div>
                 
                 <div class="form-group">
@@ -112,12 +70,19 @@
                 <div class="form-group">
                     <label for="stock">Stock</label>
                     <input type="text" (keypress)="keyPressNumbers($event)" class="form-control" id="codigoSAP" placeholder="Ingrese el stock"
-                        formControlName="stock" />
+                        formControlName="stock"
+                    
+                        />
                 </div>
                 <div class="form-group">
                     <label for="precio">Precio</label>
                     <input type="text" (keypress)="keyPressNumbers($event)" class="form-control" id="codigoSAP" placeholder="Ingrese el precio"
                         formControlName="precio" />
+                </div>
+                <div class="form-group">
+                    <label for="costo">Costo</label>
+                    <input type="text" (keypress)="keyPressNumbers($event)" class="form-control" id="codigoSAP" placeholder="Ingrese el costo"
+                        formControlName="costo" />
                 </div>
                 <button type="submit" class="btn btn-primary">
                     <fa-icon [icon]="faSave" [size]="'sm'"></fa-icon>
