--- a/src/app/components/income/vistapedidos/vistapedidos.component.css
+++ b/src/app/components/income/vistapedidos/vistapedidos.component.css
@@ -2,7 +2,7 @@
     margin: 25px;
   }
   
-  .dashboard-card {
+  .-card {
     position: relative;
     top: 1px;
     left: 10px;
@@ -15,7 +15,7 @@
     background: #fff;
   }
   
-  .dashboard-card:hover {
+  .-card:hover {
     position: relative;
     top: 1px;
     left: 10px;
@@ -34,7 +34,7 @@
     right: 10px;
   }
   
-  .dashboard-card-content {
+  .-card-content {
     font-family: "Poppins", sans-serif;
     font-size: 0.875rem;
     line-height: 1.5;
@@ -43,7 +43,7 @@
     color: #4c63b5;
   }
   
-  .dashboard-card:hover>.dashboard-card-content {
+  .-card:hover>.-card-content {
     font-family: "Poppins", sans-serif;
     font-size: 0.875rem;
     line-height: 1.5;
