--- a/src/app/components/sales/menuvent/menuvent.component.html
+++ b/src/app/components/sales/menuvent/menuvent.component.html
@@ -2,11 +2,19 @@
     <div class="card">
         <br />
         <div class="card-header d-flex justify-content-between">
-            <div class="row mx-3">
-                <fa-icon [icon]="faShoppingBag" [size]="'3x'" style="color: #636363"></fa-icon>
-                <h1 class="mx-5" style="color: #636363">FACTURACIÓN</h1>
+            <div class="row mx-3 align-items-center">
+                <div class="col-auto">
+                    <fa-icon [icon]="faShoppingBag" [size]="'3x'" style="color: #636363"></fa-icon>
+                </div>
+                <div class="col">
+                    <h1 class="mb-0" style="color: #636363; font-size: 24px;">FACTURACIÓN</h1>
+                </div>
+            </div>
+            <div class="ml-auto text-right pr-3" style="color: #888888; font-size: 14px;">
+                <strong>Vendiendo en: </strong>{{nombreAlmacenUsuario}}
             </div>
         </div>
+        
         <div class="card-body">
 
             <form [formGroup]="clienteForm">
