--- a/src/app/components/users/configuracion/configuracion.component.html
+++ b/src/app/components/users/configuracion/configuracion.component.html
@@ -158,6 +158,31 @@
                         </button>
                     </div>
                 </form>
+
+
+                
+                <form [formGroup]="emailForm">
+                    <div align="left">
+                        <br>
+                        <h5 class="title">Formas de pago</h5>
+                    </div>
+                    
+                    <!-- Recorrer lstFormasPago y mostrar checkbox con el nombre de cada forma de pago -->
+                    <div class="form-check" *ngFor="let formaPago of lstFormasPago">
+                        <input class="form-check-input" 
+                               type="checkbox" 
+                               [value]="formaPago.id" 
+                               [id]="formaPago.id" 
+                               [checked]="formaPago.checked"
+                               (change)="changeCheckbox($event, formaPago)">
+                        <label class="form-check-label" [for]="formaPago.id">
+                            {{formaPago.nombre}}
+                        </label>
+                    </div>
+                    
+                    
+
+                </form>
                 <br>
             </mat-card>
         </div>
