Cambios en formas de pago select formas de pago

--- a/src/app/components/shooping/menucompr/menucompr.component.html
+++ b/src/app/components/shooping/menucompr/menucompr.component.html
@@ -128,6 +128,12 @@
                         NUEVO PRODUCTO
                     </button>
                 </div>
+                <div class="col-md-3">
+                    <button class="btn button carrito-button" [disabled]="true">
+                        <fa-icon [icon]="faArchive" [size]="'lg'" style="color: #ffffff; margin-right: 10px;"></fa-icon>
+                        XML PLASTICAUCHO
+                    </button>
+                </div>
             </div>
             <br><br>
             <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover" id="dtdt">
