Cambios solicitados revision 3

--- a/src/app/components/sales/almacenesegresos/almacenesegresos.component.html
+++ b/src/app/components/sales/almacenesegresos/almacenesegresos.component.html
@@ -33,7 +33,7 @@
                             <a class="btn button ver-icon" (click)="abrirVista(almacen)" style="border-radius: 5px; 
                                      background: rgb(49,99,173,0.8); 
                                      font-size: 15px; width:120px; 
-                                     height:35px;
+                                     heightd:35px;
                                      text-align:center; 
                                      margin-top: 10px;
                                      ">
