--- a/src/app/components/users/tercerosusuarios/tercerosusuarios.component.html
+++ b/src/app/components/users/tercerosusuarios/tercerosusuarios.component.html
@@ -15,7 +15,7 @@
             <div>
                 <mat-grid-list cols="6" rowHeight="50px">
                     <mat-grid-tile>
-                        <a class="btn button" href="./navegation-cl/(contentClient:tercerosalmacen)"
+                        <a class="btn button" href="./navegation-cl"
                             style="text-align:center;
                                     font-size: 15px; width:140px; 
                                        height:35px;
@@ -34,7 +34,6 @@
             <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
                 <thead style="color: #636363;">
                     <tr>
-                        <th style="width: 20%; ">Tipo de Usuario</th>
                         <th style="width: 20%; ">Codigo</th>
                         <th style="width: 20%; ">Tipo de I.D.</th>
                         <th style="width: 20%; ">Identificacion</th>
@@ -51,7 +50,6 @@
                 </thead>
                 <tbody style="color: #767695;">
                     <tr *ngFor="let tercero of lstTerceros">
-                        <td>{{tercero.tipousuario}}</td>
                         <td>100{{tercero.id}}</td>
                         <td>{{tercero.nombretercero}}</td>
                         <td>{{tercero.id_fiscal}}</td>
