--- a/src/app/components/inventories/inventarios-almacen/inventarios-almacen.component.html
+++ b/src/app/components/inventories/inventarios-almacen/inventarios-almacen.component.html
@@ -6,6 +6,23 @@
                 <fa-icon [icon]="faUserFriends" [size]="'3x'" style="color: #636363;"></fa-icon>
                 <h1 class="mx-5 " style="color: #636363;">Inventarios de los Almacenes</h1>
                 <div style="position: absolute;right:0;" class="mx-3">
+                    <!-- Boton para ver el inventario de todos los almacenes -->
+                    <a class="btn button
+                        ver-icon" style="border-radius: 5px; 
+                                       background: rgb(49,99,173,0.8); 
+                                       font-size: 15px; width:120px; 
+                                       height:35px;
+                                       text-align:center; 
+                                       margin-top: 10px;
+                                       "
+                                       (click)="vertodos()">
+                                       
+                        <span style="color:white;">
+                            VER TODOS
+                        </span>
+                    </a>
+                    
+
                 </div>
             </div>
         </div>
