--- a/src/app/components/sales/menuvent/menuvent.component.html
+++ b/src/app/components/sales/menuvent/menuvent.component.html
@@ -80,6 +80,12 @@
                         <button class="btn btn-primary" style="margin-left: 50px; margin-top: 7px;" [disabled]="identificacion == '' || nombre == '' || correo == '' || ciudad == '' || direccion == '' || telefono == ''" (click)="actualizar()">Actualizar</button>
                     </div>
                 </div>
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <br>
+                        <button class="btn btn-primary" style="margin-left: 50px; margin-top: 7px;" [disabled]="identificacion == '' || nombre == '' || correo == '' || ciudad == '' || direccion == '' || telefono == ''" >Descargar Inventario</button>
+                    </div>
+                </div>
             </div>
 
             <!-- Contenedor flex para agregar productos y productos agregados -->
