--- a/src/app/components/cash-balancing/cash-balancing.component.html
+++ b/src/app/components/cash-balancing/cash-balancing.component.html
@@ -50,35 +50,31 @@
     <div class="card-body">
         <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-bordered table-striped vertical-table">
             <tbody style="color: #000000;">
-                <tr class="custom-table" (click)="verDetalleMovimiento('1')">
+                <tr class="custom-table" (click)="verDetalleMovimiento('1')" *ngIf="containsEfectivo">
                     <th style="width: 33%; background-color: rgb(205, 205, 223);">EFECTIVO</th>
                     <td>$ {{efectivo}}</td>
                 </tr>
-                <tr class="custom-table" (click)="verDetalleMovimiento('2')">
+                <tr class="custom-table" (click)="verDetalleMovimiento('2')" *ngIf="containsTarDeb">
                     <th style="width: 33%; background-color: rgb(205, 205, 223);">TARJETA DE DÉBITO</th>
                     <td>$ {{tar_deb}}</td>
                 </tr>
-                <tr class="custom-table" (click)="verDetalleMovimiento('3')">
+                <tr class="custom-table" (click)="verDetalleMovimiento('3')" *ngIf="containsTarCre">
                     <th style="width: 34%; background-color: rgb(205, 205, 223);">TARJETA DE CRÉDITO</th>
                     <td>$ {{tar_cre}}</td>
+                </tr>
+                <tr class="custom-table" (click)="verDetalleMovimiento('4')" *ngIf="containsTransferencia">
+                    <th style="width: 34%; background-color: rgb(205, 205, 223);">TRANSFERENCIA BANCARIA</th>
+                    <td>$ {{transferencia}}</td>
+                </tr>
+                <tr class="custom-table" (click)="verDetalleMovimiento('5')" *ngIf="containsDeposito">
+                    <th style="width: 34%; background-color: rgb(205, 205, 223);">DEPOSITO BANCARIO</th>
+                    <td>$ {{deposito}}</td>
                 </tr>
             </tbody>
         </table>
     </div>
     
-    <div class="card-body">
-        <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-bordered table-striped vertical-table">
-           <!-- Mapear y mostrar cada uno de los nombres de la forma pago de la sociedad -->
-            
-            <tbody style="color: #000000;">
-                <tr class="custom-table" *ngFor="let formaPago of formasPagoSociedad; let i = index" (click)="verDetalleMovimiento('5')">
-                    <th style="width: 33%; background-color: rgb(205, 205, 223);">{{formaPago.nombreFormaPago}}</th>
-                    <td>$ {{sumaTotal}}</td>
-                </tr>
-            </tbody>
 
-        </table>
-    </div>
     
 
     <div class="icon-container">
