--- a/src/app/components/sales/descargar-inventario/descargar-inventario.component.html
+++ b/src/app/components/sales/descargar-inventario/descargar-inventario.component.html
@@ -2,8 +2,9 @@
 <div class="modal-dialog custom-modal">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title"><i class="fas fa-download mr-2"></i> DESCARGAR INVENTARIO</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <h5 class="modal-title"><i class="fas fa-shop mr-2"></i> DESCARGAR INVENTARIO</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"
+          (click)="closeModal()">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
@@ -39,9 +40,46 @@
             <input type="text" class="form-control cool-input3" placeholder="Resto" readonly [(ngModel)]="resto" [ngStyle]="{'background-color': inputColor}">
           </div>
         </div>
+        <table datatable [dtOptions]="dtOptions2" [dtTrigger]="dtTrigger2" style="width: 50%; margin-left: 20px;">
+          <thead>
+            <tr>
+              <th style="width: 10%; ">FORMA DE PAGO</th>
+              <th style="width: 10%; ">FORMA DE PAGO</th>
+              <th style="width: 10%; ">VALOR</th>
+              <th style="width: 10%; "></th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let detallePago of lstDetallePagos; let i = index">
+              <td>{{detallePago.id}}</td>
+              <td>{{detallePago.nombre}}</td>
+              <td>
+                <ng-container *ngIf="!editarDetalle || i !== detalleEditIndex">
+                  {{detallePago.valor}}
+                </ng-container>
+                <input class="small-input" (input)="onInput($event)" *ngIf="editarDetalle && i === detalleEditIndex"
+                  type="text" [(ngModel)]="detallePago.valor">
+              </td>
+              <td style="text-align: center;">
+                <ng-container *ngIf="!editarDetalle || i !== detalleEditIndex">
+                  <fa-icon [icon]="faEdit" class="btn btn-info" [size]="'lg'" style="margin-right: 5px;"
+                    data-placement="bottom" (click)="editarDetallePago(i)" title="Editar pago"></fa-icon>
+                </ng-container>
+                <ng-container *ngIf="editarDetalle && i === detalleEditIndex">
+                  <fa-icon [icon]="faCheck" class="btn btn-success" [size]="'lg'" style="margin-right: 5px;"
+                    data-placement="bottom" (click)="aplicarCambiosDetalle(i)" title="Aplicar"></fa-icon>
+                </ng-container>
+                <fa-icon [icon]="faTrashAlt" class="btn btn-danger" [size]=" 'lg' " data-placement="bottom"
+                  (click)=" eliminarDetalle(detallePago)" title="Eliminar pago"></fa-icon>
+              </td>
+            </tr>
+          </tbody>
+        </table>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal"
+          (click)="closeModal()"
+        >Cerrar</button>
         <button type="button" class="btn btn-primary"
             (click)="descargarInventario()"
         >Confirmar</button>
