Solucion factura y nombre agregado en compras mas responsividad

--- a/src/app/components/sales/factura/factura.component.html
+++ b/src/app/components/sales/factura/factura.component.html
@@ -131,7 +131,7 @@
   </div>
   <br><br>
   <div class="botones">
-    <button class="btn btn-primary" style="margin-right: 70px;" (click)="generarPDF()" [disabled]="pdfGenerado">
+    <button class="btn btn-primary" style="margin-right: 70px;" (click)="guardarPDF()">
       <span style="color: white; font-size: 20px;">Generar PDF</span>
     </button>
     <button class="btn btn-primary" (click)="enviarComprobante()" [disabled]="!pdfGenerado">
