--- a/src/app/components/shooping/compraprov/compraprov.component.html
+++ b/src/app/components/shooping/compraprov/compraprov.component.html
@@ -1,21 +1,29 @@
 <div style="max-width: 95%;margin: auto;">
     <div class="card">
         <div class="card-header">
-            <div class="row mx-3">
-                <fa-icon [icon]="faList" [size]="'3x'" style="color: #636363;"></fa-icon>
-                <h1 class="mx-5 " style="color: #636363;">COMPRAS</h1>
-                <div style="position: absolute;right:0;" class="mx-3">
-                    <a class="btn btn-success" (click)="crearCompra()" style=" border-radius: 5px; 
-                            font-size: 12px; width:150px; 
-                            height:35px;
-                            margin-top: 25px;
-                            text-align:center; 
-                            ;">NUEVO
-                    </a>
+            <div class="container">
+                <div class="row align-items-center">
+                    <!-- Icono -->
+                    <div class="col-auto">
+                        <fa-icon [icon]="faList" [size]="'3x'" class="icon"></fa-icon>
+                    </div>
+        
+                    <!-- Título -->
+                    <div class="col title-container">
+                        <h1 class="title">COMPRAS</h1>
+                    </div>
+        
+                    <!-- Contenido a la derecha -->
+                    <div class="col-auto right-content">
+                        <div class="responsive-text">
+                            <strong>Vendiendo en: </strong>{{nombreAlmacenCompra}}
+                        </div>
+                        <a class="btn btn-success" (click)="crearCompra()">NUEVO</a>
+                    </div>
                 </div>
             </div>
-            <br>
         </div>
+        
         <div class="card-body ">
             <div class="row mx-3">
                 <a class="btn button" href="./navegation-cl/(contentClient:almacenesshooping)" style="text-align:center;
