--- a/src/app/components/inventories/inventarios/inventarios.component.html
+++ b/src/app/components/inventories/inventarios/inventarios.component.html
@@ -12,6 +12,12 @@
                 </div>
                 -->
             </div>
+
+
+            
+            <div class="ml-auto text-right pr-3" style="color: #888888; font-size: 14px;">
+                <strong>Productos de: </strong>{{inventarioAlamacenNombre}}
+            </div>
         </div><br>
         <mat-grid-list cols="6" rowHeight="50px">
             <mat-grid-tile>
