--- a/src/app/components/shooping/compraprov/compraprov.component.html
+++ b/src/app/components/shooping/compraprov/compraprov.component.html
@@ -16,7 +16,7 @@
                     <!-- Contenido a la derecha -->
                     <div class="col-auto right-content">
                         <div class="responsive-text">
-                            <strong>Vendiendo en: </strong>{{nombreAlmacenCompra}}
+                            <strong>Comprando en: </strong>{{nombreAlmacenCompra}}
                         </div>
                         <a class="btn btn-success" (click)="crearCompra()">NUEVO</a>
                     </div>
