--- a/src/app/components/inventories/inventarios-pedido-lineas/inventarios-pedido-lineas.component.html
+++ b/src/app/components/inventories/inventarios-pedido-lineas/inventarios-pedido-lineas.component.html
@@ -7,6 +7,10 @@
                 <h1 class="mx-5 " style="color: #636363;">Inventarios</h1>
                 <div style="position: absolute;right:0;" class="mx-3">
                 </div>
+
+                <div class="ml-auto text-right pr-3" style="color: #888888; font-size: 14px;">
+                    <strong>Inventario de: </strong>{{nombreAlmacenCompra}}
+                </div>
             </div>
         </div>
         <div class="card-body ">
